<resources>
    <string name="app_name">JVM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_aplikasi">JVM</string>
    <string name="kategori">Kategori</string>
    <string name="find_recipe">Find recipe</string>
    <string name="item">+ ADD ITEM</string>
    <string name="produk">Produk</string>
    <string name="_23">23</string>
    <string name="nama_alat">Nama Alat</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="cd_img_pet">imgproduk</string>
    <string name="cd_icon_location">Lokasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="warna">Warna</string>
    <string name="berat">Berat</string>
    <string name="deskripsi">deskripsi</string>
    <string name="asuransi">Asuransi</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>

</resources>