<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.main.MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="22dp"
                    android:text="@string/nama_aplikasi"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:iconifiedByDefault="false"
                        app:queryHint="@string/find_recipe">

                        <requestFocus />

                    </androidx.appcompat.widget.SearchView>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_produk"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:drawSelectorOnTop="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="@color/colorpink"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/_500"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="25sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/produk"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="25sp"
                                    android:textStyle="bold" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cv_kategori"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:drawSelectorOnTop="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="10dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="@color/colororange"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/_23"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="25sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/kategori"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="25sp"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/kategori"
                        android:textColor="@color/colorblak"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_grid_kategori" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>